--- a/server.cfg
+++ b/server.cfg
@@ -16,6 +16,7 @@ start hardcap
 start rconlog
 start scoreboard
 start playernames
+start fivem-map-skater
 
 # ESSENTIAL
 start async
@@ -32,26 +33,26 @@ start skinchanger
 
 # ESX
 start esx_accessories
-start esx_addonaccount
+start esx_addonaccount #que account é essa?
 start esx_addoninventory
-start esx_ambulancejob
-start esx_animations
-start esx_atm
-start esx_bankerjob
+start esx_ambulancejob #onde pega medkit e bandage?
+start esx_animations #limitar as ações
+start esx_atm #mudar para depositar só em banco
+start esx_bankerjob #como funciona?
 start esx_barbershop
-start esx_basicneeds
+start esx_basicneeds #mudar lugar
 start esx_billing
 start esx_boilerplate
 start esx_clotheshop
-start esx_cruisecontrol
+#start esx_cruisecontrol #mudar
 start esx_datastore
 start esx_dmvschool
 start esx_drugs
-start esx_garage
+start esx_garage #dá pra duplicar carro, mudar
 start esx_holdup
 start esx_identity
-start esx_joblisting
-start esx_jobs
+start esx_joblisting #dá pra tirar alguns trampos nada a ver
+start esx_jobs #dá pra tirar alguns trampos nada a ver
 start esx_license
 start esx_lscustom
 start esx_mask
@@ -59,16 +60,16 @@ start esx_mecanojob
 start esx_menu_default
 start esx_menu_dialog
 start esx_menu_list
-start esx_phone
+start esx_phone #testar o esx_phone3
 start esx_policejob
-start esx_property
-start esx_realestateagentjob
+#start esx_property
+#start esx_realestateagentjob
 start esx_rpchat
 start esx_service
-start esx_shops
+start esx_shops #checar e add mais pontos
 start esx_skin
-start esx_society
-start esx_status
+#start esx_society
+start esx_status #ajuda no basicneeds
 start esx_taxijob
 start esx_vehicleshop
 start esx_voice
@@ -106,7 +107,27 @@ add_principal identifier.steam:1100001067748a0 group.admin # add the admin to th
 sv_endpointprivacy true
 
 # server slots limit (must be between 1 and 31)
-sv_maxclients 4
+sv_maxclients 6
 
 # license key for server (https://keymaster.fivem.net)
 sv_licenseKey 0q6sppcng70ab57kusqisixcd2dbiu73
+
+set vb_enable_pvp true
+set vb_disable_wanted_level true
+set vb_disable_emergency_services true
+set vb_force_god_mode_enabled falseset vb_enable_welcome_message true
+set vb_make_welcome_message_global false
+set vb_welcome_message "Seja bem-vindo {player}, siga as regras e bom roleplay!"
+set vb_enable_whitelist true
+set vb_whitelist_kick_message "Você não está na whitelist! Entre no discord.gg(inserir discord aqui)"
+set vb_enable_crowd_control true
+set vb_enable_traffic_control true
+set vb_crowd_density 0.7
+set vb_traffic_density 0.7
+set vb_enable_unlimited_stamina false
+set vb_check true
+set vb_debug false
+start vBasic
+
+add_ace identifier.steam:1100001067748a0 vbasic.whitelisted allow
+add_ace identifier.steam:110000103ed4e6c vbasic.whitelisted allow
